# DeepResearch-study

./: .gitignore  README.md
.github/: pull_request_template.md
01_DeepResearch_Original/: .env.example
02_DeepResearch_DeepAgent/: .gitignore  ARCHITECTURE_ANALYSIS.md  COMPARISON.md
03_Project_AX_Advanced/: .deepagents.example.config  .env.example  ARCHITECTURE.md  PROJECT_STATUS.md  README.md  langgraph.json  main.py  pyproject.toml
03_Project_AX_Advanced/docs/: FILESYSTEM_AGENT_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_ADVANCED.md
03_Project_AX_Advanced/examples/: README.md  deep_agent_demo.py  documentation_demo.py
03_Project_AX_Advanced/src/agentic_coding_assistant/: cli.py  graph.py  state.py
03_Project_AX_Advanced/src/agentic_coding_assistant/agents/: documentation_agent.py  self_healing_agent.py
03_Project_AX_Advanced/src/agentic_coding_assistant/analyzers/: __init__.py  base.py  precision_analyzer.py
03_Project_AX_Advanced/src/agentic_coding_assistant/nodes/: __init__.py
03_Project_AX_Advanced/src/agentic_coding_assistant/prompts/: __init__.py  orchestrator.py
03_Project_AX_Advanced/src/agentic_coding_assistant/skills/: __init__.py  registry.py  tool_collections.py
03_Project_AX_Advanced/src/agentic_coding_assistant/subagents/: analyzer.py  documenter.py  refactorer.py
03_Project_AX_Advanced/src/agentic_coding_assistant/tools/: __init__.py  dynamic.py  subagent_tools.py
03_Project_AX_Advanced/src/agentic_coding_assistant/utils/: openrouter_llm.py  workspace.py
03_Project_AX_Advanced/tests/: __init__.py
Project_AX_Advanced/: CHANGELOG.md  DEEPAGENT_UPDATE_SUMMARY.md  FINAL_VERIFICATION.md  main.py  (+5 more)
(+64 files in other folders)
